<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tasks Manager 2.0</string>
    <string name="add_new_subtask">Добавить новую подзадачу</string>
    <string name="default_task_name">Новая задача</string>
    <string name="savebutton">Сохранить</string>
    <string name="deletebutton">Удалить</string>
    <string name="addsubjectbutton">Добавить новую задачу</string>
    <string name="default_subtask_name">Новая подзадача</string>
    <string name="subjectnamelabel">Введите название задачи</string>
    <string name="marknamelabel">Название</string>
    <string name="subtaskstypelabel">Тип</string>
    <string name="markseditheaderlabel">Subtask edit</string>
    <string name="tasks_activity_title">Список задач</string>
    <string name="subtasks_activity_title">Список подзадач</string>
    <string name="edit_task_activity_title">Редактирование задачи</string>
    <string name="edit_subtask_activity_title">Редактирование подзадачи</string>
    <string-array name="types_array">
        <item>Важная</item>
        <item>Обычная</item>
        <item>Выполненная</item>
    </string-array>
</resources>
