<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="?android:attr/actionBarSize"
        >

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marknamelabel"
                android:gravity="center_vertical|left" android:paddingLeft="10dp"
                android:textColor="@android:color/white" android:textSize="20dp"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_subtask_name"
                android:id="@+id/editMarkTitle" android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtaskstypelabel"
                android:gravity="center_vertical|left" android:paddingLeft="10dp"
                android:textColor="@android:color/white" android:textSize="20dp"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/savebutton"
                android:id="@+id/saveButton" android:layout_weight="1"
                android:onClick="onSaveMark"
                />
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/deletebutton"
                android:id="@+id/deleteButton" android:layout_weight="1"
                android:onClick="onDeleteMark"
                />
    </LinearLayout>
</LinearLayout>