<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp" android:background="@android:color/holo_green_dark">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/markseditheaderlabel"
                android:id="@+id/textView" android:gravity="center" android:layout_marginLeft="5dp"
                android:singleLine="true" android:textSize="30dp" android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp">
        <TextView
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:text="@string/marknamelabel"
                android:id="@+id/textView" android:gravity="center_vertical|left" android:paddingLeft="10dp"
                android:textColor="@android:color/white" android:textSize="20dp"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/defaultmarkname"
                android:id="@+id/editMarkTitle" android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp">
        <TextView
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:text="@string/subtaskstypelabel"
                android:id="@+id/textView" android:gravity="center_vertical|left" android:paddingLeft="10dp"
                android:textColor="@android:color/white" android:textSize="20dp"/>
        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/spinner"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp">
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/savebutton"
                android:id="@+id/saveButton" android:layout_weight="1" android:enabled="true"
                android:onClick="onSaveMark" android:background="@android:color/holo_orange_light"
                android:layout_margin="5dp" android:textColor="@android:color/black" android:textSize="20dp"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/deletebutton"
                android:id="@+id/deleteButton" android:layout_weight="1" android:enabled="true"
                android:onClick="onDeleteMark" android:background="@android:color/holo_orange_light"
                android:layout_margin="5dp" android:textColor="@android:color/black" android:textSize="20dp"/>
    </LinearLayout>
</LinearLayout>